change location of nav slightly to avoid p overlap

--- a/styles/sass/_nav.scss
+++ b/styles/sass/_nav.scss
@@ -11,7 +11,7 @@ nav {
   visibility: hidden;
   z-index: 100;
   position: fixed;
-  right: 10px;
+  right: 0px;
   top: 10px;
   padding: 5px 10px;
 }
